--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,13 +12,14 @@ Description: A library that provides a simple way of fitting detection
         truncation as well as monotonicity constraints and binning are
         supported. Abundance and density estimates can also be
         calculated if survey area information is provided.
-Version: 0.7.1
+Version: 0.7.2
 URL: http://github.com/dill/Distance/wiki
-Date: 2012-08-06
+Date: 2013-07-04
 Depends: R (>= 2.10.0), mrds, optimx, Rsolnp
 Suggests: testthat
 Collate: 'ds.R' 'create.bins.R' 'model.description.R' 'plot.dsmodel.R'
         'print.dsmodel.R' 'print.summary.dsmodel.R' 'summary.dsmodel.R'
-Packaged: 2012-11-08 03:08:37 UTC; dill
+Packaged: 2013-07-04 17:04:12 UTC; dill
+NeedsCompilation: no
 Repository: CRAN
-Date/Publication: 2012-11-08 06:21:25
+Date/Publication: 2013-07-04 20:23:45
