--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,18 +5,18 @@ Title: A simple way to fit detection functions to distance sampling
         data and calculate abundance/density for biological
         populations.
 LazyLoad: yes
-Author: David L. Miller
+Author: David Lawrence Miller
 Description: A library that provides a simple way of fitting detection
     functions to distance sampling data for both line and point transects.
     Adjustment term selection, left and right truncation as well as
     monotonicity constraints and binning are supported. Abundance and density
     estimates can also be calculated if survey area information is provided.
-Version: 0.8.0
-URL: http://github.com/dill/Distance/wiki
-Date: 2014-01-06
-Depends: R (>= 2.15.0), mrds, optimx, Rsolnp
+Version: 0.9
+URL: http://github.com/DistanceDevelopment/Distance/
+Date: 2014-04-22
+Depends: R (>= 3.0), mrds
 Suggests: testthat
-Packaged: 2014-01-09 16:26:08 UTC; dill
+Packaged: 2014-04-22 17:22:36 UTC; dill
 NeedsCompilation: no
 Repository: CRAN
-Date/Publication: 2014-01-09 21:40:40
+Date/Publication: 2014-04-22 22:11:48
