--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,4 +2,6 @@ S3method(plot,dsmodel)
 S3method(print,dsmodel)
 S3method(print,summary.dsmodel)
 S3method(summary,dsmodel)
+export(create.bins)
 export(ds)
+import(mrds)
