--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,12 +11,12 @@ Description: A library that provides a simple way of fitting detection
     Adjustment term selection, left and right truncation as well as
     monotonicity constraints and binning are supported. Abundance and density
     estimates can also be calculated if survey area information is provided.
-Version: 0.9.1
+Version: 0.9.2
 URL: http://github.com/DistanceDevelopment/Distance/
-Date: 2014-06-10
-Depends: R (>= 3.0), mrds
+Date: 2014-10-15
+Depends: R (>= 3.0), mrds (>= 2.1.8)
 Suggests: testthat
-Packaged: 2014-06-10 20:51:30 UTC; dill
+Packaged: 2014-09-15 19:05:40 UTC; dill
 NeedsCompilation: no
 Repository: CRAN
-Date/Publication: 2014-06-11 01:51:20
+Date/Publication: 2014-09-16 02:14:01
